--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 </div>
 <p><br></p>
 <p><strong>North Staffordshire Combined NHS Foundation Trust</strong> Neuropsychology Peer Supervision group<br></p>
-<p>8th November, 2023</p>
+<p>14th August, 2024</p>
 </section>
 <section id="overview" class="slide level2">
 <h2>Overview</h2>
@@ -355,9 +355,9 @@
 <p><br></p>
 <div class="columns">
 <div class="column" style="width:50%;">
-<h4 id="you-are-all-tasked-with-investigating">You are all tasked with investigating:</h4>
+<h4 id="you-are-all-tasked-with">You are all tasked with:</h4>
 <ul>
-<li><p>Diagnosis</p></li>
+<li><p>Diagnosis / Impression / Formulation</p></li>
 <li><p>Recommendations</p></li>
 </ul>
 </div><div class="column" style="width:50%;">
@@ -379,9 +379,7 @@
 
 <h3 id="background-information-1">Background Information</h3>
 <ul>
-<li><p><strong>Gender:</strong> Male.</p></li>
-<li><p><strong>Age:</strong> 66.</p></li>
-<li><p><strong>Ethnicity:</strong> White.</p></li>
+<li><p><strong>Demographics:</strong> 66 y/o White British Male.</p></li>
 <li><p><strong>Occupation:</strong> Retired electrical engineer and trainer in telecommunications.</p></li>
 <li><p><strong>Marital Status:</strong> Married.</p></li>
 <li><p><strong>Handedness:</strong> Right.</p></li>
@@ -403,15 +401,14 @@
 
 <h3 id="health-history">Health History</h3>
 <ul>
-<li><strong>Health Events:</strong> No significant past medical history. TIA in 2017.</li>
-<li><strong>Health Conditions:</strong> hypertension.</li>
-<li><strong>Seizures:</strong> (left frontotemporal seizures, secondary generalised seizures, night-time generalised seizures.</li>
+<li><strong>Health :</strong> No significant past medical history. TIA in 2017. Hypertension.</li>
+<li><strong>Seizures:</strong> left frontotemporal, secondary generalised seizures, night-time generalised.</li>
 <li><strong>Medication:</strong> anti-convulsant (Phenytoin &gt; Levetiracetam &gt; Lamotrigine), anti-depressant (aggressive behaviour).</li>
-<li><strong>Substance Usage:</strong> Non-smoker; minimal alcohol intake</li>
+<li><strong>Substance Usage:</strong> Non-smoker; minimal alcohol intake.</li>
 <li><strong>Mental Health:</strong> No history of prior input from MH servives.</li>
-<li><strong>Symptom Course:</strong> Suspected to be worsening over time, however patient is still highly independent.</li>
+<li><strong>Symptom Course:</strong> Family initially suspected worsening over time, patient denies problems.</li>
 <li><strong>Stability:</strong> Memory concerns reportedly marked but with some days better than others.</li>
-<li><strong>Brain scans:</strong> Repeated MRI scans initially suggested brain atrophy in bifrontal and parietal areas; however FDG-PET brain scan was not in fitting with a neuro-degenerative condition</li>
+<li><strong>Brain scans:</strong> Repeated MRI scans initially suggested mild brain atrophy in bifrontal and parietal areas; however FDG-PET brain scan was not in fitting with a neuro-degenerative condition.</li>
 </ul>
 </section>
 <section id="discuss-1" class="slide level2">
@@ -439,6 +436,18 @@
 <h1>Current Neuropsychological Assessment</h1>
 
 </section>
+<section id="long-term-forgetting" class="slide level2">
+<h2>Long-term forgetting?</h2>
+<p>What is it? How can it be assessed?</p>
+<ul>
+<li>Memory tests with a long delay?</li>
+<li>Practice effects?</li>
+</ul>
+</section>
+<section id="very-long-delay" class="slide level2">
+<h2>Very Long Delay</h2>
+
+<img data-src="images/alf-test-scores-2.png" class="r-stretch"></section>
 <section id="practice-effects" class="slide level2">
 <h2>Practice Effects</h2>
 
